--- a/CSManagement/CSManagement/Views/Teachers/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Edit.cshtml
@@ -94,6 +94,15 @@
             </div>
         </div>
 
+        @if (ViewBag.Message != null)
+        {
+            <script type="text/javascript">
+                window.onload = function () {
+                    alert("@ViewBag.Message");
+                };
+            </script>
+        }
+
         <div class="box-footer">
             หมายเหตุ : กรุณาตรวจสอบข้อมูลให้ถูกต้องก่อนทำการกดบันทึก
         </div>
