--- a/CSManagement/CSManagement/Views/Projects/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Create.cshtml
@@ -39,12 +39,23 @@
             <!-- /.box-header -->
             <div class="box-body" style="font-size:15px">
                 <div class="row">
-                    <div class="form-group col-lg-6">
-                        @Html.LabelFor(model => model.Pj_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Pj_StuID, new { htmlAttributes = new { @class = "form-control", @id = "Stu_Name", @PlaceHolder = "พิมชื่อนักศึกษา" } })
-                        @Html.ValidationMessageFor(model => model.Pj_StuID, "", new { @class = "text-danger" })
-                    </div>
+                    @if (Session["AJ"] != null)
+                    {
+                        <div class="form-group col-lg-6">
+                            @Html.LabelFor(model => model.Pj_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.Pj_StuID, new { htmlAttributes = new { @class = "form-control", @id = "Stu_Name", @PlaceHolder = "พิมชื่อนักศึกษา" } })
+                            @Html.ValidationMessageFor(model => model.Pj_StuID, "", new { @class = "text-danger" })
+                        </div>
+                    }
 
+                    @if (Session["PJ"] != null)
+                    {
+                        <div class="form-group col-lg-6">
+                            @Html.LabelFor(model => model.Pj_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.Pj_StuID, new { htmlAttributes = new { @class = "form-control", Value = @Session["UserID"], @readonly = true } })
+                            @Html.ValidationMessageFor(model => model.Pj_StuID, "", new { @class = "text-danger" })
+                        </div>
+                    }
 
                     <div class="form-group col-lg-6">
                         @Html.LabelFor(model => model.Pj_TeaID, "ชื่ออาจารย์ที่ปรึกษา", htmlAttributes: new { @class = "control-label" })
@@ -101,7 +112,7 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         @Html.LabelFor(model => model.Pj_Video, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Pj_Video, new { htmlAttributes = new { @class = "form-control", @PlaceHolder = "Copy ลิ้งค์เว็บไซต์มาวาง" } })
+                        @Html.EditorFor(model => model.Pj_Video, new { htmlAttributes = new { @class = "form-control", @PlaceHolder = "Copy ไอดีวิดีโอมาใส่" } })
                         @Html.ValidationMessageFor(model => model.Pj_Video, "", new { @class = "text-danger" })
                     </div>
 
