--- a/CSManagement/CSManagement/Views/Projects/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Details.cshtml
@@ -13,7 +13,10 @@
                     <h1 class="box-title">รายละเอียดข้อมูลปริญญานิพนธ์</h1>
                     <div style="float:right">
                         <a class="btn btn-default" href="@Url.Action("Index", "Projects")"><i class="fa fa-mail-reply"></i> ย้อยกลับ</a>
-                        <a class="btn btn-warning" href="@Url.Action("Edit", "Projects", new { id = Model.Pj_ID })"><i class="fa fa-edit"></i>แก้ไขข้อมูล</a>
+                        @if (Session["UserID"].ToString() == @Model.Pj_StuID)
+                        {
+                            <a class="btn btn-warning" href="@Url.Action("Edit", "Projects", new { id = Model.Pj_ID })"><i class="fa fa-edit"></i>แก้ไขข้อมูล</a>
+                        }
                     </div>
                 </div>
             </div>
