--- a/CSManagement/CSManagement/Views/Projects/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Edit.cshtml
@@ -5,8 +5,23 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style type="text/css">
+    textarea {
+        resize: none;
+    }
+</style>
 
-@using (Html.BeginForm("Create", "Projects", FormMethod.Post, new { enctype = "multipart/form-data", accept_charset = "utf-8" }))
+@if (ViewBag.ResultErrorMessage != null)
+{
+    <script type="text/javascript">
+
+        window.onload = function () {
+            alert("@ViewBag.ResultErrorMessage");
+        };
+    </script>
+}
+
+@using (Html.BeginForm("Edit", "Projects", FormMethod.Post, new { enctype = "multipart/form-data", accept_charset = "utf-8" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -24,11 +39,24 @@
             <!-- /.box-header -->
             <div class="box-body" style="font-size:15px">
                 <div class="row">
-                    <div class="form-group col-lg-6">
-                        @Html.LabelFor(model => model.Pj_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Pj_StuID, new { htmlAttributes = new { @class = "form-control", @id = "Stu_Name", @PlaceHolder = "พิมชื่อนักศึกษา" } })
-                        @Html.ValidationMessageFor(model => model.Pj_StuID, "", new { @class = "text-danger" })
-                    </div>
+
+                    @if (Session["AJ"] != null)
+                    {
+                        <div class="form-group col-lg-6">
+                            @Html.LabelFor(model => model.Pj_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.Pj_StuID, new { htmlAttributes = new { @class = "form-control", @id = "Stu_Name", @PlaceHolder = "พิมชื่อนักศึกษา" } })
+                            @Html.ValidationMessageFor(model => model.Pj_StuID, "", new { @class = "text-danger" })
+                        </div>
+                    }
+
+                    @if (Session["PJ"] != null)
+                    {
+                        <div class="form-group col-lg-6">
+                            @Html.LabelFor(model => model.Pj_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.Pj_StuID, new { htmlAttributes = new { @class = "form-control", Value = @Session["UserID"], @readonly = true } })
+                            @Html.ValidationMessageFor(model => model.Pj_StuID, "", new { @class = "text-danger" })
+                        </div>
+                    }
 
 
                     <div class="form-group col-lg-6">
