--- a/CSManagement/CSManagement/Views/Students/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Index.cshtml
@@ -30,31 +30,34 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                <tr>
-                    <td>@(i++)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Stu_ID)</td>
-                    <td>@item.Stu_Title @item.Stu_Name @item.Stu_Surname</td>
-                    <td>@Html.DisplayFor(modelItem => item.Stu_Birthday)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Stu_Tel)</td>
-                    @* 1 = กำลังศึกษาอยู่ / 2 = สำเร็จการศึกษา / 3 = เกียรตินิยมอันดับ 1 / 4 = เกียรตินิยมอันดับ 2 / 5 = พ้นสภาพการเป็นนักศึกษา / 6 = พักการเรียน *@
-                    @if (item.Stu_StatusID == 3)
-                    {
-                        <td style="color:red">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
-                    }
-                    else if (item.Stu_StatusID == 4)
-                    {
-                        <td style="color:darkorange">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
-                    }
-                    else
-                    {
-                        <td>@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
-                    }
-                    <td style="text-align:center">
-                        <a class="btn btn-warning" href="@Url.Action("Edit", "Students", new { id = item.Stu_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
-                        <a class="btn btn-info" href="@Url.Action("Details", "Students", new { id = item.Stu_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
-                        <a class="btn btn-danger" href="@Url.Action("Delete", "Students", new { id = item.Stu_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
-                    </td>
-                </tr>
+                    <tr>
+                        <td>@(i++)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Stu_ID)</td>
+                        <td>@item.Stu_Title @item.Stu_Name @item.Stu_Surname</td>
+                        <td>@Html.DisplayFor(modelItem => item.Stu_Birthday)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Stu_Tel)</td>
+                        @* 1 = กำลังศึกษาอยู่ / 2 = สำเร็จการศึกษา / 3 = เกียรตินิยมอันดับ 1 / 4 = เกียรตินิยมอันดับ 2 / 5 = พ้นสภาพการเป็นนักศึกษา / 6 = พักการเรียน *@
+                        @if (item.Stu_StatusID == 3)
+                        {
+                            <td style="color:red">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
+                        }
+                        else if (item.Stu_StatusID == 4)
+                        {
+                            <td style="color:darkorange">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
+                        }
+                        else
+                        {
+                            <td>@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
+                        }
+                        <td style="text-align:center">
+                            <div class="delete-section">
+                                <a class="btn btn-warning" href="@Url.Action("Edit", "Students", new { id = item.Stu_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
+                                <a class="btn btn-info" href="@Url.Action("Details", "Students", new { id = item.Stu_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                                <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.Stu_ID})">ลบข้อมูล</a>
+                                <div class="btn btn-danger delete-confirm" style="display:none" data-delete-id="@item.Stu_ID">ยืนยันการลบ</div>
+                            </div>
+                        </td>
+                    </tr>
                 }
             </tbody>
         </table>
@@ -82,5 +85,67 @@
                 }]
             });
         });
+    </script>
+
+    <script type="text/javascript">
+    $(function () {
+        $("a.delete-link").click(function () {
+            var deleteLink = $(this);
+            deleteLink.hide();
+            var confirmButton = deleteLink.siblings(".delete-confirm");
+            confirmButton.show();
+
+            var cancelDelete =  function () {
+                removeEvents();
+                showDeleteLink();
+            };
+
+            var deleteItem = function () {
+                removeEvents();
+                confirmButton.hide();
+                $.post(
+                    '@Url.Action("Delete")',
+                    AddAntiForgeryToken({ id: confirmButton.attr('data-delete-id') }))
+                   .done(function () {
+                       var parentRow = deleteLink.parents("tr:first");
+                       parentRow.fadeOut('fast', function () {
+                           parentRow.remove();
+                       });
+                   }).fail(function (data) {
+                       alert("error");
+                   });
+                return false;
+            };
+
+            var removeEvents = function () {
+                confirmButton.off("click", deleteItem);
+                $(document).on("click", cancelDelete);
+                $(document).off("keypress", onKeyPress);
+            };
+
+            var showDeleteLink = function () {
+                confirmButton.hide();
+                deleteLink.show();
+            };
+
+            var onKeyPress = function (e) {
+                //Cancel if escape key pressed
+                if (e.which == 27) {
+                    cancelDelete();
+                }
+            };
+
+            confirmButton.on("click", deleteItem);
+            $(document).on("click", cancelDelete);
+            $(document).on("keypress", onKeyPress);
+
+            return false;
+        });
+
+        AddAntiForgeryToken = function (data) {
+            data.__RequestVerificationToken = $('input[name=__RequestVerificationToken]').val();
+            return data;
+        };
+    });
     </script>
 }
