--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -77,6 +77,12 @@
                                 <a href="@Url.Action("Index", "Departments")"><i class="fa fa-user"></i> <span>ข้อมูลหมวดวิชา</span></a>
                             </li>
                             <li>
+                                <a href="@Url.Action("Index", "Syllabus")"><i class="fa fa-user"></i> <span>ข้อมูลประชาสัมพันธ์หลักสูตร</span></a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Index", "News")"><i class="fa fa-user"></i> <span>ข้อมูลประชาสัมพันธ์ข่าว</span></a>
+                            </li>
+                            <li>
                                 <a href="@Url.Action("Index", "Courses")"><i class="fa fa-user"></i> <span>ข้อมูลหลักสูตร</span></a>
                             </li>
                             <li>
@@ -101,9 +107,6 @@
                             </li>
                             <li>
                                 <a href="@Url.Action("Index", "Disposes")"><i class="fa fa-user"></i> <span>การจำหน่าย</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "CESups")"><i class="fa fa-address-book"></i> <span>ครุภัณฑ์ทั้งหมด</span></a>
                             </li>
                         </ul>
                     </li>
