--- a/CSManagement/CSManagement/Views/Generations/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Edit.cshtml
@@ -5,16 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Gen_NO)
     <section class="content">
         <div class="box box-default">
             <div class="box-header with-border">
-                <h3 class="box-title">แก้ไขข้อมูลรุ่นหลักสูตรอบรม</h3>
+                <h3 class="box-title">เพิ่มข้อมูลรุ่นหลักสูตรอบรม</h3>
 
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
@@ -59,6 +57,24 @@
 
                 <div class="row">
                     <div class="form-group col-md-6">
+                        @Html.LabelFor(model => model.Gen_Date, htmlAttributes: new { @class = "control-label" })
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            <input type="text" id="gendate" name="gendate" class="form-control" data-inputmask="'alias': 'dd-mm-yyyy'" data-mask>
+                        </div>
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        @Html.LabelFor(model => model.Gen_Location, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Gen_Location, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Gen_Location, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-md-6">
                         @Html.LabelFor(model => model.Gen_Details, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Gen_Details, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
                         @Html.ValidationMessageFor(model => model.Gen_Details, "", new { @class = "text-danger" })
@@ -79,3 +95,4 @@
         </div>
     </section>
 }
+
