--- a/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
@@ -6,6 +6,7 @@
     int i = 1;
 }
 
+@**@
 <head>
     <style>
         .outer {
@@ -81,64 +82,16 @@
                                                 <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
                                                 <td style="text-align:right"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)</strong></td>
                                                 <td style="text-align:center">
-                                                    @*<a class="btn btn-info" href="@Url.Action("DetailsUser", "Generations", new { id = item.Gen_NO })"><i class="fa fa-list-ul"></i> รายละเอียด</a>*@
-                                                    <button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-list-ul"></i> รายละเอียด</button>
+                                                    <button type="button" class="btn btn-success btn-sm  modal-link"
+                                                            data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
+                                                        รายละเอียด
+                                                    </button>
+                                                    @*<button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-list-ul"></i> รายละเอียด</button>*@
                                                 </td>
                                             </tr>
                                         }
                                     </tbody>
                                 </table>
-
-                                <div class="modal fade" id="myModal" role="dialog">
-                                    <div class="modal-dialog">
-
-                                        <!-- Modal content-->
-                                        @foreach (var item in Model)
-                                        {
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                    <h4 class="modal-title" style="letter-spacing:0px;font-size:20px">รายละเอียดหลักสูตร</h4>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <table class="table" style="width:100%">
-                                                        <tbody>
-
-                                                            <tr>
-                                                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
-                                                                <td>@Html.DisplayFor(modelItem => item.Short_Course.SC_NameTH)</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Name)</th>
-                                                                <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Name)</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Member)</th>
-                                                                <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Member)</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Year)</th>
-                                                                <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
-                                                                <td style="text-align:right"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)</strong></td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <a class="btn btn-default" href="@Url.Action("Registers","Generations", new { id = item.Gen_NO })"><i class="fa fa-edit"></i>สมัครคอร์ส</a>
-
-                                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                </div>
-                                            </div>
-                                        }
-
-                                    </div>
-                                </div>
-
                             </div>
                         </div>
                     </div>
@@ -151,6 +104,26 @@
 @section Scripts{
     <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
+
+    <script type="text/javascript">
+        $(function () {
+
+            $('body').on('click', '.modal-link', function (e) {
+                e.preventDefault();
+
+                $("#modal-container").remove();
+
+                $.get($(this).data("targeturl"), function (data) {
+
+                    $('<div id="modal-container" class="modal fade" role="dialog">' +
+                        '<div class="modal-dialog">'+
+                        '<div class="modal-content" id= "modalbody" >'+
+                        data + '</div></div>').modal();
+
+                });
+            });
+        });
+    </script>
 
     <script>
         $(document).ready(function () {
@@ -168,4 +141,6 @@
             });
         });
     </script>
+
+
 }
