--- a/CSManagement/CSManagement/Views/Pictures/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Pictures/Index.cshtml
@@ -48,3 +48,99 @@
         </div>
     </div>
 </section>
+
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Pic_Img)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Pic_Name)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Pic_Img)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Pic_Name)
+            </td>
+            <td style="text-align:center">
+                <div class="delete-section">
+                @Html.ActionLink("Details", "Details", new { id = item.Pic_ID })
+                    <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.Pic_ID})">ลบข้อมูล</a>
+                    <div class="btn btn-danger delete-confirm" style="display:none" data-delete-id="@item.Pic_ID">ยืนยันการลบ</div>
+                </div>
+            </td>
+        </tr>
+    }
+
+</table>
+
+@section Scripts{
+    <script type="text/javascript">
+    $(function () {
+        $("a.delete-link").click(function () {
+            var deleteLink = $(this);
+            deleteLink.hide();
+            var confirmButton = deleteLink.siblings(".delete-confirm");
+            confirmButton.show();
+
+            var cancelDelete =  function () {
+                removeEvents();
+                showDeleteLink();
+            };
+
+            var deleteItem = function () {
+                removeEvents();
+                confirmButton.hide();
+                $.post(
+                    '@Url.Action("Delete")',
+                    AddAntiForgeryToken({ id: confirmButton.attr('data-delete-id') }))
+                   .done(function () {
+                       var parentRow = deleteLink.parents("tr:first");
+                       parentRow.fadeOut('fast', function () {
+                           parentRow.remove();
+                       });
+                   }).fail(function (data) {
+                       alert("error");
+                   });
+                return false;
+            };
+
+            var removeEvents = function () {
+                confirmButton.off("click", deleteItem);
+                $(document).on("click", cancelDelete);
+                $(document).off("keypress", onKeyPress);
+            };
+
+            var showDeleteLink = function () {
+                confirmButton.hide();
+                deleteLink.show();
+            };
+
+            var onKeyPress = function (e) {
+                //Cancel if escape key pressed
+                if (e.which == 27) {
+                    cancelDelete();
+                }
+            };
+
+            confirmButton.on("click", deleteItem);
+            $(document).on("click", cancelDelete);
+            $(document).on("keypress", onKeyPress);
+
+            return false;
+        });
+
+        AddAntiForgeryToken = function (data) {
+            data.__RequestVerificationToken = $('input[name=__RequestVerificationToken]').val();
+            return data;
+        };
+    });
+    </script>
+}
