--- a/CSManagement/CSManagement/Views/RegisterLinks/Index.cshtml
+++ b/CSManagement/CSManagement/Views/RegisterLinks/Index.cshtml
@@ -36,8 +36,11 @@
                             <td style="text-align:center">@(i++)</td>
                             <td>@Html.DisplayFor(modelItem => item.Weblink)</td>
                             <td style="text-align:center">
-                                <a class="btn btn-warning" href="@Url.Action("Edit", "RegisterLinks", new { id = item.WL_ID })"><i class="fa fa-edit"></i> แก้ไข</a>
-                                <a class="btn btn-danger" href="@Url.Action("Delete", "RegisterLinks", new { id = item.WL_ID })"><i class="fa fa-trash-o"></i> ลบข้อมูล</a>
+                                <div class="delete-section">
+                                    <a class="btn btn-warning" href="@Url.Action("Edit", "RegisterLinks", new { id = item.WL_ID })"><i class="fa fa-edit"></i> แก้ไข</a>
+                                    <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.WL_ID})"><i class="fa fa-trash-o"></i>ลบข้อมูล</a>
+                                    <div class="btn btn-danger delete-confirm" style="display:none" data-delete-id="@item.WL_ID"><i class="fa fa-trash-o"></i> ยืนยันการลบ</div>
+                                </div>
                             </td>
                         </tr>
                     }
@@ -46,3 +49,67 @@
         </div>
     </div>
 </section>
+
+@section Scripts{
+    <script type="text/javascript">
+    $(function () {
+        $("a.delete-link").click(function () {
+            var deleteLink = $(this);
+            deleteLink.hide();
+            var confirmButton = deleteLink.siblings(".delete-confirm");
+            confirmButton.show();
+
+            var cancelDelete =  function () {
+                removeEvents();
+                showDeleteLink();
+            };
+
+            var deleteItem = function () {
+                removeEvents();
+                confirmButton.hide();
+                $.post(
+                    '@Url.Action("Delete")',
+                    AddAntiForgeryToken({ id: confirmButton.attr('data-delete-id') }))
+                   .done(function () {
+                       var parentRow = deleteLink.parents("tr:first");
+                       parentRow.fadeOut('fast', function () {
+                           parentRow.remove();
+                       });
+                   }).fail(function (data) {
+                       alert("error");
+                   });
+                return false;
+            };
+
+            var removeEvents = function () {
+                confirmButton.off("click", deleteItem);
+                $(document).on("click", cancelDelete);
+                $(document).off("keypress", onKeyPress);
+            };
+
+            var showDeleteLink = function () {
+                confirmButton.hide();
+                deleteLink.show();
+            };
+
+            var onKeyPress = function (e) {
+                //Cancel if escape key pressed
+                if (e.which == 27) {
+                    cancelDelete();
+                }
+            };
+
+            confirmButton.on("click", deleteItem);
+            $(document).on("click", cancelDelete);
+            $(document).on("keypress", onKeyPress);
+
+            return false;
+        });
+
+        AddAntiForgeryToken = function (data) {
+            data.__RequestVerificationToken = $('input[name=__RequestVerificationToken]').val();
+            return data;
+        };
+    });
+    </script>
+}
