--- a/CSManagement/CSManagement/Views/Generations/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Index.cshtml
@@ -64,9 +64,12 @@
                                 @Html.DisplayFor(modelItem => item.Gen_Fee)
                             </td>
                             <td style="text-align:center">
-                                <a class="btn btn-warning" href="@Url.Action("Edit", "Generations", new { id = item.Gen_NO })"><i class="fa fa-edit"></i>แก้ไข</a>
-                                <a class="btn btn-info" href="@Url.Action("Details", "Generations", new { id = item.Gen_NO })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
-                                <a class="btn btn-danger" href="@Url.Action("Delete", "Generations", new { id = item.Gen_NO })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                                <div class="delete-section">
+                                    <a class="btn btn-warning" href="@Url.Action("Edit", "Generations", new { id = item.Gen_NO })"><i class="fa fa-edit"></i>แก้ไข</a>
+                                    <a class="btn btn-info" href="@Url.Action("Details", "Generations", new { id = item.Gen_NO })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                                    <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.Gen_NO})">ลบข้อมูล</a>
+                                    <div class="btn btn-danger delete-confirm" style="display:none" data-delete-id="@item.Gen_NO">ยืนยันการลบ</div>
+                                </div>
                             </td>
                         </tr>
                     }
@@ -76,6 +79,7 @@
     </div>
 </section>
 <link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+
 @section Scripts{
     <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
@@ -96,4 +100,67 @@
             });
         });
     </script>
+
+    <script type="text/javascript">
+    $(function () {
+        $("a.delete-link").click(function () {
+            var deleteLink = $(this);
+            deleteLink.hide();
+            var confirmButton = deleteLink.siblings(".delete-confirm");
+            confirmButton.show();
+
+            var cancelDelete =  function () {
+                removeEvents();
+                showDeleteLink();
+            };
+
+            var deleteItem = function () {
+                removeEvents();
+                confirmButton.hide();
+                $.post(
+                    '@Url.Action("Delete")',
+                    AddAntiForgeryToken({ id: confirmButton.attr('data-delete-id') }))
+                   .done(function () {
+                       var parentRow = deleteLink.parents("tr:first");
+                       parentRow.fadeOut('fast', function () {
+                           parentRow.remove();
+                       });
+                   }).fail(function (data) {
+                       alert("error");
+                   });
+                return false;
+            };
+
+            var removeEvents = function () {
+                confirmButton.off("click", deleteItem);
+                $(document).on("click", cancelDelete);
+                $(document).off("keypress", onKeyPress);
+            };
+
+            var showDeleteLink = function () {
+                confirmButton.hide();
+                deleteLink.show();
+            };
+
+            var onKeyPress = function (e) {
+                //Cancel if escape key pressed
+                if (e.which == 27) {
+                    cancelDelete();
+                }
+            };
+
+            confirmButton.on("click", deleteItem);
+            $(document).on("click", cancelDelete);
+            $(document).on("keypress", onKeyPress);
+
+            return false;
+        });
+
+        AddAntiForgeryToken = function (data) {
+            data.__RequestVerificationToken = $('input[name=__RequestVerificationToken]').val();
+            return data;
+        };
+    });
+    </script>
+
 }
