--- a/CSManagement/CSManagement/Views/Projects/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Details.cshtml
@@ -17,6 +17,10 @@
                         {
                             <a class="btn btn-warning" href="@Url.Action("Edit", "Projects", new { id = Model.Pj_ID })"><i class="fa fa-edit"></i>แก้ไขข้อมูล</a>
                         }
+                        @if (Session["AJ"] != null)
+                        {
+                            <a class="btn btn-warning" href="@Url.Action("Edit", "Projects", new { id = Model.Pj_ID })"><i class="fa fa-edit"></i>แก้ไขข้อมูล</a>
+                        }
                     </div>
                 </div>
             </div>
