--- a/CSManagement/CSManagement/Views/Projects/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Edit.cshtml
@@ -98,16 +98,22 @@
                 </div>
 
                 <div class="row">
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
                         @Html.LabelFor(model => model.Pj_Github, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Pj_Github, new { htmlAttributes = new { @class = "form-control", @PlaceHolder = "Copy ลิ้งค์เว็บไซต์มาวาง(ไม่มีให้ปล่อยว่าง)" } })
                         @Html.ValidationMessageFor(model => model.Pj_Github, "", new { @class = "text-danger" })
                     </div>
 
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
                         @Html.LabelFor(model => model.Pj_Linkweb, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Pj_Linkweb, new { htmlAttributes = new { @class = "form-control", @PlaceHolder = "Copy ลิ้งค์เว็บไซต์มาวาง" } })
                         @Html.ValidationMessageFor(model => model.Pj_Linkweb, "", new { @class = "text-danger" })
+                    </div>
+                    
+                    <div class="form-group col-lg-4">
+                        @Html.LabelFor(model => model.Pj_Rate, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Pj_Rate, new { htmlAttributes = new { @class = "form-control", @PlaceHolder = "ใส่ตัวเลข 1-5" } })
+                        @Html.ValidationMessageFor(model => model.Pj_Rate, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
